--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -48,14 +48,13 @@
         {{ with .Description }}
           {{ . | markdownify }}
         {{ else }}
-          {{ if .Truncated }}
-            {{ .Summary | markdownify }}
+          {{ .Summary | markdownify }}
+          {{ if and .Truncated (not .Params.hideReadMore) }}
+            <div><a class="read-more button" href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore | default "Read more" }} →</a></div>
           {{ end }}
         {{ end }}
       </div>
-      {{ if not .Params.hideReadMore }}
-        <div><a class="read-more button" href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore | default "Read more" }} →</a></div>
-      {{ end }}
+
     </div>
     {{ end }}
     {{ partial "pagination.html" . }}
